--- a/bower.json
+++ b/bower.json
@@ -8,5 +8,8 @@
     "normalize-opentype.css": "~0.2.4",
     "typeplate-starter-kit": "~2.1.0",
     "magnific-popup": "~1.0.0"
+  },
+  "dependencies": {
+    "picturefill": "~2.3.1"
   }
 }
