--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "rss": "^1.1.1",
     "sitemap": "^0.7.4",
     "sprintf-js": "^1.0.2",
+    "template": "^0.15.0",
     "underscore": "^1.8.3",
     "verb": "^0.7.4",
     "vinyl": "^0.4.6",
