New headers, new copyright year

--- a/data/characters.yaml
+++ b/data/characters.yaml
@@ -329,7 +329,7 @@ characters:
             - "Helen Wijk, aunt (deceased)"
     satinder:
         answers:
-            - "Legally, or the name I've taken for myself? If the second, Satinder Singh. I'd prefer not to share my legal name, if it's all the same"
+            - "Legally, or the name I've taken for myself? If the second, Satinder Kaur Singh. I'd prefer not to share my legal name, if it's all the same"
             - "I'm twenty-five"
             - "Do I have to ...? Okay. Blonde. Blue eyes. Average height, I guess. I'm not a 'rye-blonde Nordic viking', if that's what you're asking. I am pleased that I finally managed to grow a beard, though"
             - "On an island in the Bohuslän archipelago, fleeing from my pain after miscarrying"
@@ -361,3 +361,6 @@ characters:
         family:
             - "Gabriel Vinge, spouse"
             - "Jasbir Singh, mentor"
+            - "Inderjit Kaur, mentor"
+            - "Ronja Eriksson, foster sister"
+            - "Gunilla Eriksson, foster mother"
